--- a/_items/2016-03-04-ID0002.md
+++ b/_items/2016-03-04-ID0002.md
@@ -3,7 +3,7 @@ layout: item
 title: NanoBlock Eiffel Tower
 comments: false
 itemid: 2016-03-04-ID0002
-author: Kalani
+author: kalani
 contributor: Kalani Craig
 shortdesc: This model of the Eiffel tower, manufactured by Nanoblock, is built out of little plastic interchangeable pieces about ⅛ the size of a standard LEGO.
 categories: [ Sentimental ]
