--- a/_items/2016-03-04-ID0002.md
+++ b/_items/2016-03-04-ID0002.md
@@ -5,7 +5,7 @@ comments: false
 itemid: 2016-03-04-ID0002
 author: kalani
 contributor: Kalani Craig
-shortdesc: This model of the Eiffel tower, manufactured by Nanoblock, is built out of little plastic interchangeable pieces about ⅛ the size of a standard LEGO.
+shortdesc: This Nanoblock model of the Eiffel tower is simultaneously a reminder of research, family, and overseas travel.
 categories: [ Sentimental ]
 ---
 
