--- a/_items/2016-03-04-ID0002.md
+++ b/_items/2016-03-04-ID0002.md
@@ -1,17 +1,21 @@
 ---
 layout: item
 title: NanoBlock Eiffel Tower
-comments: false
-itemid: 2016-03-04-ID0002
 author: kalani
-contributor: Kalani Craig
+itemid: 2016-03-04-ID0002
+itemcontributor: Kalani Craig
+itemcreator: Nanoblock
+itemsubject: LEGO toys
+itemdate: circa 2018
+itemtype: Physical Object
 shortdesc: This Nanoblock model of the Eiffel tower is simultaneously a reminder of research, family, and overseas travel.
-categories: [ Sentimental ]
+categories: [  ]
+tags: [ toy, Paris, Eiffel Tower, LEGO, building, art ]
 ---
 
 #### About this object
 
-This model of the Eiffel tower, manufactured by Nanoblock and titled "Rives de la Seine a Paris" in their "Sights To See" collection (https://nanoblockus.com/product/rives-de-la-seine-a-paris), is built out of little plastic interchangeable pieces about ⅛ the size of a standard LEGO.
+This model of the Eiffel tower, manufactured by Nanoblock and titled ["Rives de la Seine a Paris"](https://nanoblockus.com/product/rives-de-la-seine-a-paris) in their "Sights To See" collection, is built out of little plastic interchangeable pieces about ⅛ the size of a standard LEGO.
 
 #### Why this object matters
 
