--- a/_items/2016-03-04-ID0002.md
+++ b/_items/2016-03-04-ID0002.md
@@ -19,4 +19,12 @@ This model of the Eiffel tower, manufactured by Nanoblock and titled ["Rives de 
 
 #### Why this object matters
 
+<blockquote>
 The model sits at my desk as a reminder of several things. My main area of research is the medieval Mediterranean and Paris was the site of my first overseas archival research trip. I recently took a combination work/family trip to Paris and the Eiffel Tower was at the top of my 6-year-old son's list of things to see. He was ecstatic even during the 2-hour wait in line to go up to the top of the tower. Finally, the actual Nanoblock kit was a holiday gift from said 6-year-old, and building it as a family was the highlight of a very cold snow day experience. Having it on my desk at work keeps me anchored in all of those different aspects of my life, both personal and professional, here at IU.
+
+<footer>
+<cite>
+Kalani Craig
+</cite>
+</footer>
+</blockquote>
