Site reupload (v1 with only our stories)

--- a/_items/2019-03-05-ID0007.md
+++ b/_items/2019-03-05-ID0007.md
@@ -1,7 +1,7 @@
 ---
 layout: item
-title: Promise ring
-author: kalani
+title: Promise Ring
+author: chelsea
 itemid: 2019-03-05-ID0007
 itemcontributor: Chelsea Villatoro
 itemcreator: Unknown
