--- a/_items/2019-03-05-ID0009.md
+++ b/_items/2019-03-05-ID0009.md
@@ -1,23 +1,31 @@
 ---
 layout: item
 title: My Vans 
-author: ben
+author: heather
 itemid: 2019-03-05-ID0009
 itemcontributor: Heather Hoffmeyer
 itemcreator: Vans
 itemsubject: 
 itemdate: circa 2018
 itemtype: Physical Object
-shortdesc: These are some shoes that go on my feet. They have a tan sole, checkerboard pattern, black toe area, white laces, and a white mid-sole. I used to never wear vans, but now they're favorite shoes!
+shortdesc: These are some shoes that go on my feet. They have a tan sole, checkerboard pattern, black toe area, white laces, and a white mid-sole. I used to never wear vans, but now they're my favorite shoes!
 categories: [ Practical ]
 tags: [ shoes, shoelaces, foot, feet, sole ]
 ---
 
 #### About this object
 
-These are some shoes that go on my feet. They have a tan sole, checkerboard pattern, black toe area, white laces, and a white mid-sole.
+Vans are a staple shoe for most skaters. Their waffle sole makes it very useful when gripping the board. I brought these shoesto campus because they gripped my razor scooter well, which I used to go to classes when the weather was nice.
+
+In 1977, Vans #36, the Old Skool, debuts with the now famous Vans Sidestripe. The Old Skool is Vans' first skate shoe that incorporated leather panels for increased durability. What started as a random doodle by Paul Van Doren was originally referred to as the "jazz stripe" and has become the unmistakable hallmark of the Vans brand. Skaters adopted Vans as their favorite shoe in California due to their durability and usefulness in skating.
+
 
 #### Why this object matters
 
-I didn't come to campus with these when I first moved in in August. Instead, I bought them over Labor Day weekend because I needed some shoes that didn't wear down so fast on my razor scooter. They've now become incorporated into my wardrobe even though I don't use my scooter anymore due to the weather.
+<blockquote>
+These are some shoes that go on my feet. They have a tan sole, checkerboard pattern, black toe area, white laces, and a white mid-sole.
 
+I didn't come to campus with these when I first moved in in August. Instead, I bought them over Labor Day weekend because I needed some shoes that didn't wear down so fast on my razor scooter. They've now become incorporated into my wardrobe even though I don't use my scooter anymore due to the weather.
+</blockquote>
+
+--Heather Hoffmeyer
