--- a/_items/2019-03-05-ID0010.md
+++ b/_items/2019-03-05-ID0010.md
@@ -1,7 +1,7 @@
 ---
 layout: item
 title: Pansexual Pride Pin
-author: heather
+author: sarah
 itemid: 2019-03-05-ID0010
 itemcontributor: Sarah Gray
 itemcreator: N/A
@@ -15,8 +15,11 @@ tags: [ pin, pansexual, accessory, material culture ]
 
 #### About this object
 
-It is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was purchased from Amazon and is normally worn on a backpack.
+This pin is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was given as a gift to show support of coming out as Pansexual. It was purchased from Amazon and is normally worn on a backpack.
+
+Pins have been used in the United States since 1789 for George Washington’s first inauguration. Then, they were patented in 1892 by Benjamin Whitehead. Pins are used to show support or express a certain feeling. The pin is used so others can see and hopefully will also support LGBTQ+ members.
 
 #### Why this object matters
 
-My roommate was one of the first people I came out to as pansexual and she bought me his pin for my birthday to show support.
+<blockquote>My roommate was one of the first people I came out to as pansexual and she bought me his pin for my birthday to show support.
+</blockquote
