--- a/_items/2019-03-05-ID0011.md
+++ b/_items/2019-03-05-ID0011.md
@@ -1,12 +1,12 @@
 ---
 layout: item
-title: paint brush
-author: katie
+title: Paint Brush
+author: sydney
 itemid: 2019-03-05-ID0011
 itemcontributor: Sydney Smith
-itemcreator: friend of grandma
+itemcreator: Friend of Grandma
 itemsubject: 
-itemdate: unknown
+itemdate: Unknown
 itemtype: Physical Object
 shortdesc: I have an old tin can that's filled with paint brushes and other art tools
 categories: [ Sentimental,Practical ]
@@ -15,8 +15,10 @@ tags: [ art, paint, brush, friends, family ]
 
 #### About this object
 
-I have an old tin can that's filled with paint brushes and other art tools
+I have an old tin can that's filled with paint brushes and other art tools.
 
 #### Why this object matters
 
+<blockquote>
 I like to paint and do crafty stuff but for a long time I didn't have paint brushes other than the type that come from cheap paint-by-numbers. A friend of my grandma's gave me her paint brushes before she moved back to Arizona. 
+</blockquote>
