--- a/_items/2019-03-05-ID0003.md
+++ b/_items/2019-03-05-ID0003.md
@@ -1,7 +1,7 @@
 ---
 layout: item
 title: Timberland Boots
-author: michael
+author: brian
 itemid: 2019-03-05-ID0003
 itemcontributor: Brian Robusto
 itemcreator: Timberland Boot Company
@@ -15,8 +15,13 @@ tags: [ boot, Timberland ]
 
 #### About this object
 
-Beige steel-toe boots with black leather top and yellow and red laces
+These beige Timberland Boots, with their steel toes, black leather top and yellow and red laces, are one of the most popular footwear nowadays among men and women of all ages. In 1952-1955, an American businessman and shoemaker by the name of Nathan Swartz bought The Abington Shoe Company, changing the name 20 years later in 1973 to The Timberland Company due to the vast popularity of none other than their extremely popular, outdoor, and waterproof yellow boots. Before the onset of the Timberland Boot craze, boots of this nature were generally used for outdoor, construction, or other rough-and-tumble uses that required a more sturdy shoeing.
+
+However, these applications did not last forever. Both men and women began to wear the boots for fashion purposes, claiming the misuse of the boots intended purpose for their own, as a choice of character. This specific wave, transforming the Timberland Boots into a fashion icon, is one of the first widespread intentional misuse of a fashion piece for cultural or stylistic reasoning. This fashion choice parallels that of another United States cultural phenomena in the same era - counterculture - in which those involved dressed, acted, and lived life with an anti-establishment mindset intended to show a different interpretation of the conventional “American Dream”.
 
 #### Why this object matters
 
-These boots signify a time of transition for me in my life, paralleling and expressed by a shift in style and self-expression 
+<blockquote>
+These boots signify a time of transition for me in my life, paralleling and expressed by a shift in style and self-expression
+</blockquote.
+
