--- a/_items/2019-03-05-ID0004.md
+++ b/_items/2019-03-05-ID0004.md
@@ -1,7 +1,7 @@
 ---
 layout: item
 title: G&L Guitar
-author: tara
+author: ben
 itemid: 2019-03-05-ID0004
 itemcontributor: Benjamin Dance
 itemcreator: G&L
@@ -17,6 +17,10 @@ tags: [ G&L, guitar, turtle shell, music, instrument ]
 
 A black G&L guitar with a turtle shell scratch protector. The guitar also has a blue and indigo strap. 
 
+G&L is a guitar design and production company that was founded by Leo Fender, George Fullerton, and Dale Hyatt in 1979[12]. G&L instruments were an attempt by Leo Fender and his associates to create a more perfected version of the Fender guitar. The small scale of its production allows for more customization of their instruments. 
+
 #### Why this object matters
 
-It's the first new guitar I've ever bought.
+<blockquote>
+I bought my own guitar in early 2018 from a guitar shop my family’s been going to for three generations. This is my first real guitar that’s not a hand-me-down from a previous family member. I practice almost everyday and make music regularly. 
+</blockquote>
