--- a/_items/2019-03-05-ID0006.md
+++ b/_items/2019-03-05-ID0006.md
@@ -1,7 +1,7 @@
 ---
-"layout: item
+layout: item
 title: Dance Shoes
-author: chelsea
+author: tara
 itemid: 2019-03-05-ID0006
 itemcontributor: Tara Rosenwinkel
 itemcreator: 
@@ -10,13 +10,18 @@ itemdate: circa 2018
 itemtype: Physical Object
 shortdesc: There are dance shoes that are tan colored and cover half of the foot with two elastic bands that go around the heel and ankle. These shoes are important because they worn everyday during high school, and therefore represent the huge impact dancing had on shaping her personality.
 categories: [ Sentimental ]
-tags: [ dance,  ]
+tags: [ dance  ]
 ---
 
 #### About this object
 
-Tan shoes that cover half of the foot with two elastic bands that go around the heel/ankle
+Tan shoes that cover half of the foot with two elastic bands that go around the heel/ankle.
+
+These modern dance shoes, also known as pirouettes, are tan shoes that cover half of the foot with two elastic bands that go around the heel/ankle. They began to emerge in the dance world when modern dance styles, such as lyrical and contemporary dance, evolved from ballet. These new styles adopted untraditional kinds of movement, which required women to have footwear that enabled them to have their feet planted firmly on the ground.  Typically made out of either canvas or leather, the shoes only cover half of the foot.  It stays on due to the two elastic bands that go around the heel of the foot.  The exposed heel and flexible material around the toes allows for the wearer to have more grip on the floor when in motion.
+
 
 #### Why this object matters
 
+<blockquote>
 Dance was a big part of my life in high school and helped shape parts of my personality
+</blockquote>
