--- a/_items/2019-03-05-ID0012.md
+++ b/_items/2019-03-05-ID0012.md
@@ -1,14 +1,14 @@
 ---
 layout: item
 title: Orgo Book
-author: kasey
+author: michael
 itemid: 2019-03-05-ID0012
 itemcontributor: Michael Tetzloff
-itemcreator: Macmilan Learning
+itemcreator: K. Peter C. Vollhardt, Neil E. Schore, Macmilan Learning (Publisher)
 itemsubject:
 itemdate: circa 2018
 itemtype: Text
-shortdesc: Traditional-looking Organic Chemistry textbook that individual spends more time with than actual people. 
+shortdesc: Traditional-looking Organic Chemistry textbook that the participant spends more time with than actual people. 
 categories: [ Practical ]
 tags: [ Textbook, School, Chemistry, Education,  ]
 ---
@@ -19,4 +19,6 @@ Traditional-looking textbook, roughly 9"x12"x1.5" weighing approximately 2lb wit
 
 #### Why this object matters
 
+<blockquote>
 I was required to purchase this book for my orgo class this semester. I initially had a couple of extraordinarily crappy PDFs that frustrated me enough to warrant the price tag for the physical textbook, but now that I have a text book, everything makes soo much more sense.
+</blockquote>
