Revised item listings and initial story listings

--- a/_items/2019-03-05-ID0006.md
+++ b/_items/2019-03-05-ID0006.md
@@ -10,7 +10,7 @@ itemdate: circa 2018
 itemtype: Physical Object
 shortdesc: There are dance shoes that are tan colored and cover half of the foot with two elastic bands that go around the heel and ankle. These shoes are important because they worn everyday during high school, and therefore represent the huge impact dancing had on shaping her personality.
 categories: [ Sentimental ]
-tags: [ dance  ]
+tags: [ material culture, clothing, feet, shoes, dance  ]
 ---
 
 #### About this object
