--- a/_items/2019-03-05-ID0007.md
+++ b/_items/2019-03-05-ID0007.md
@@ -10,7 +10,7 @@ itemdate: circa 2014
 itemtype: Physical Object
 shortdesc: A small silver promise ring given by the participant's mother to the participant's father on leaving for America.
 categories: [ Sentimental ]
-tags: [ ring, jewelry, silver, immigration ]
+tags: [ material culture, ring, jewelry, silver, immigration ]
 ---
 
 #### About this object
