--- a/_items/2019-03-05-ID0008.md
+++ b/_items/2019-03-05-ID0008.md
@@ -10,7 +10,7 @@ itemdate: circa 2018
 itemtype: Physical Object
 shortdesc: A wallet that is attached to the back of a cell phone to hold credit cards, debit cards, ID, etc. Black with IU logo and recreational sports imprinted on it. It is important because it is always being used.
 categories: [ Practical ]
-tags: [ wallet, phone, accesory ]
+tags: [ wallet, phone, accessory ]
 ---
 
 #### About this object
