--- a/_items/2019-03-05-ID0009.md
+++ b/_items/2019-03-05-ID0009.md
@@ -10,7 +10,7 @@ itemdate: circa 2018
 itemtype: Physical Object
 shortdesc: These are some shoes that go on my feet. They have a tan sole, checkerboard pattern, black toe area, white laces, and a white mid-sole. I used to never wear vans, but now they're my favorite shoes!
 categories: [ Practical ]
-tags: [ shoes, shoelaces, foot, feet, sole ]
+tags: [ material culture, clothing, shoes, shoelaces, feet, sole ]
 ---
 
 #### About this object
