--- a/_items/2019-03-05-ID0011.md
+++ b/_items/2019-03-05-ID0011.md
@@ -8,17 +8,11 @@ itemcreator: Friend of Grandma
 itemsubject: 
 itemdate: Unknown
 itemtype: Physical Object
-shortdesc: I have an old tin can that's filled with paint brushes and other art tools
+shortdesc: An old tin can that's filled with paint brushes and other art tools
 categories: [ Sentimental,Practical ]
 tags: [ art, paint, brush, friends, family ]
+itemabout: |
+ An old tin can that's filled with paint brushes and other art tools.
+itemquote: |
+ I like to paint and do crafty stuff but for a long time I didn't have paint brushes other than the type that come from cheap paint-by-numbers. A friend of my grandma's gave me her paint brushes before she moved back to Arizona. 
 ---
-
-#### About this object
-
-I have an old tin can that's filled with paint brushes and other art tools.
-
-#### Why this object matters
-
-<blockquote>
-I like to paint and do crafty stuff but for a long time I didn't have paint brushes other than the type that come from cheap paint-by-numbers. A friend of my grandma's gave me her paint brushes before she moved back to Arizona. 
-</blockquote>
