--- a/_items/2019-03-05-ID0012.md
+++ b/_items/2019-03-05-ID0012.md
@@ -11,14 +11,9 @@ itemtype: Text
 shortdesc: Traditional-looking Organic Chemistry textbook that the participant spends more time with than actual people. 
 categories: [ Practical ]
 tags: [ Textbook, School, Chemistry, Education,  ]
+itemabout: |
+ Traditional-looking textbook, roughly 9"x12"x1.5" weighing approximately 2lb with a frog on the cover.
+
+itemquote: |
+ I was required to purchase this book for my orgo class this semester. I initially had a couple of extraordinarily crappy PDFs that frustrated me enough to warrant the price tag for the physical textbook, but now that I have a text book, everything makes soooo much more sense.
 ---
-
-#### About this object
-
-Traditional-looking textbook, roughly 9"x12"x1.5" weighing approximately 2lb with a frog on the cover.
-
-#### Why this object matters
-
-<blockquote>
-I was required to purchase this book for my orgo class this semester. I initially had a couple of extraordinarily crappy PDFs that frustrated me enough to warrant the price tag for the physical textbook, but now that I have a text book, everything makes soo much more sense.
-</blockquote>
