Revised front-matter formatting for A200 students' artifacts

--- a/_items/2019-03-05-ID0004.md
+++ b/_items/2019-03-05-ID0004.md
@@ -11,16 +11,11 @@ itemtype: Physical Object
 shortdesc: This black G&L guitar with a turtle shell scratch protector and a blue indigo strap was the first guitar I ever bought and I use it everyday.
 categories: [ Practical ]
 tags: [ G&L, guitar, turtle shell, music, instrument ]
+itemabout: |
+ A black G&L guitar with a turtle shell scratch protector. The guitar also has a blue and indigo strap. 
+
+ G&L is a guitar design and production company that was founded by Leo Fender, George Fullerton, and Dale Hyatt in 1979[12]. G&L instruments were an attempt by Leo Fender and his associates to create a more perfected version of the Fender guitar. The small scale of its production allows for more customization of their instruments. 
+
+itemquote: |
+ I bought my own guitar in early 2018 from a guitar shop my family’s been going to for three generations. This is my first real guitar that’s not a hand-me-down from a previous family member. I practice almost everyday and make music regularly. 
 ---
-
-#### About this object
-
-A black G&L guitar with a turtle shell scratch protector. The guitar also has a blue and indigo strap. 
-
-G&L is a guitar design and production company that was founded by Leo Fender, George Fullerton, and Dale Hyatt in 1979[12]. G&L instruments were an attempt by Leo Fender and his associates to create a more perfected version of the Fender guitar. The small scale of its production allows for more customization of their instruments. 
-
-#### Why this object matters
-
-<blockquote>
-I bought my own guitar in early 2018 from a guitar shop my family’s been going to for three generations. This is my first real guitar that’s not a hand-me-down from a previous family member. I practice almost everyday and make music regularly. 
-</blockquote>
