--- a/_items/2019-03-05-ID0007.md
+++ b/_items/2019-03-05-ID0007.md
@@ -11,12 +11,8 @@ itemtype: Physical Object
 shortdesc: A small silver promise ring given by the participant's mother to the participant's father on leaving for America.
 categories: [ Sentimental ]
 tags: [ material culture, ring, jewelry, silver, immigration ]
+itemabout: |
+ A small size 7 silver ring, no engravings, with one small white diamond on top
+itemquote: |
+ This ring was given to my mother from my father as a promise ring for when he came to America for this first time. 
 ---
-
-#### About this object
-
-small size 7 silver ring, no engravings, with one small white diamond on top
-
-#### Why this object matters
-
-This ring was given to my mother from my father as a promise ring for when he came to America for this first time. 
