--- a/_items/2019-03-05-ID0010.md
+++ b/_items/2019-03-05-ID0010.md
@@ -11,15 +11,10 @@ itemtype: Physical Object
 shortdesc: It is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was purchased from Amazon and is normally worn on a backpack. This pin represents a part of Sarah's identity.
 categories: [ Sentimental ]
 tags: [ pin, pansexual, accessory, material culture ]
+itemabout: |
+ This pin is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was given as a gift to show support of coming out as Pansexual. It was purchased from Amazon and is normally worn on a backpack.
+
+ Pins have been used in the United States since 1789 for George Washington’s first inauguration. Then, they were patented in 1892 by Benjamin Whitehead. Pins are used to show support or express a certain feeling. The pin is used so others can see and hopefully will also support LGBTQ+ members.
+itemquote: |
+ My roommate was one of the first people I came out to as pansexual and she bought me his pin for my birthday to show support.
 ---
-
-#### About this object
-
-This pin is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was given as a gift to show support of coming out as Pansexual. It was purchased from Amazon and is normally worn on a backpack.
-
-Pins have been used in the United States since 1789 for George Washington’s first inauguration. Then, they were patented in 1892 by Benjamin Whitehead. Pins are used to show support or express a certain feeling. The pin is used so others can see and hopefully will also support LGBTQ+ members.
-
-#### Why this object matters
-
-<blockquote>My roommate was one of the first people I came out to as pansexual and she bought me his pin for my birthday to show support.
-</blockquote
