--- a/_items/2019-03-22-ID0015.md
+++ b/_items/2019-03-22-ID0015.md
@@ -5,7 +5,7 @@ author: kalani
 itemid: 2019-03-22-ID0015
 itemcontributor: Daniel Story
 itemcreator: Apple Computer
-itemsubject: 
+itemsubject: Apple Computer, Inc.
 itemdate: circa 2011
 itemtype: Physical Object
 shortdesc:  A white adaptor, approximately 2 inches from end to end, for a VGA cable to a Thunderbolt port on a Macbook, circa 2015
