Metadata error fixes

--- a/_items/2019-03-22-ID0009.md
+++ b/_items/2019-03-22-ID0009.md
@@ -5,7 +5,7 @@ author: jonathan
 itemid: 2019-03-022-ID0009
 itemcontributor: Jonathan Hosey
 itemcreator: Unknown
-itemsubject: [My Chemical Romance (Musical group)](http://id.loc.gov/authorities/names/no2005029389.html)
+itemsubject: My Chemical Romance (Musical group) http://id.loc.gov/authorities/names/no2005029389.html
 itemdate: Circa 2006
 itemtype: Physical Object
 shortdesc: A black graphic t-shirt with the text "My Chemical Romance" on top in one font and "[The Black Parade](https://en.wikipedia.org/wiki/The_Black_Parade)" in another.
