--- a/_items/2019-03-05-ID0006.md
+++ b/_items/2019-03-05-ID0006.md
@@ -8,7 +8,7 @@ itemcreator:
 itemsubject: dance shoes
 itemdate: circa 2018
 itemtype: Physical Object
-shortdesc: Tan colored, half-shoes with two elastic bands 
+shortdesc: Women's size 6 tan-colored, half-shoes with two elastic bands that go around the heel/ankle. 
 categories: [ Sentimental ]
 tags: [ material culture, clothing, feet, shoes, dance  ]
 itemabout: |  
