--- a/_items/2019-03-05-ID0003.md
+++ b/_items/2019-03-05-ID0003.md
@@ -5,7 +5,8 @@ author: brian
 itemid: 2019-03-05-ID0003
 itemcontributor: Brian Robusto
 itemcreator: Timberland Boot Company
-itemsubject: http://id.loc.gov/authorities/subjects/sh85015782
+itemsubjecturl: http://id.loc.gov/authorities/subjects/sh85015782
+itemsubject: Boots
 itemdate: ca. 2014
 itemtype: Physical Object
 shortdesc: Beige steel-toe boots with black leather top and yellow and red laces. 6" with steel toes on each shoe. 
