LoC subject heading cleanup part I

--- a/_items/2019-03-05-ID0006.md
+++ b/_items/2019-03-05-ID0006.md
@@ -4,7 +4,7 @@ title: Dance Shoes
 author: tara
 itemid: 2019-03-05-ID0006
 itemcontributor: Tara Rosenwinkel
-itemcreator: 
+itemcreator: Unknown
 itemsubject: dance shoes
 itemdate: circa 2018
 itemtype: Physical Object
