--- a/_items/2019-03-05-ID0007.md
+++ b/_items/2019-03-05-ID0007.md
@@ -5,7 +5,8 @@ author: chelsea
 itemid: 2019-03-05-ID0007
 itemcontributor: Chelsea Villatoro
 itemcreator: Unknown
-itemsubject: http://id.loc.gov/authorities/names/no2014133175.html
+itemsubjecturl: http://id.loc.gov/authorities/subjects/sh2012003451
+itemsubject: Wedding rings
 itemdate: circa 2014
 itemtype: Physical Object
 shortdesc: A small promise ring given by the participant's father to the participant's mother upon leaving for America after getting married.
