--- a/_items/2019-03-05-ID0009.md
+++ b/_items/2019-03-05-ID0009.md
@@ -5,7 +5,8 @@ author: heather
 itemid: 2019-03-05-ID0009
 itemcontributor: Heather Hoffmeyer
 itemcreator: Vans
-itemsubject: http://id.loc.gov/authorities/subjects/sh85123744.html
+itemsubjecturl: http://id.loc.gov/authorities/subjects/sh85123744.html
+itemsubject: Sneakers
 itemdate: circa 2018
 itemtype: Physical Object
 shortdesc: These are some shoes that have a tan sole, checkerboard pattern, black toe area, white laces, a white mid-sole, and they are a size 8 in women's.
