--- a/_items/2019-03-22-ID0005.md
+++ b/_items/2019-03-22-ID0005.md
@@ -5,14 +5,15 @@ author: Benjamin Dance
 itemid: 2019-03-22-ID0005
 itemcontributor: Sara Duke
 itemcreator: Ron Chernow
-itemsubject: Alexander Hamilton https://www.loc.gov/collections/alexander-hamilton-papers/about-this-collection/related-resources/
+itemsubject: Alexander Hamilton
+itemsubjecturl: http://id.loc.gov/authorities/names/n79021633.html
 itemdate: Circa 2005
 itemtype: Physical Object
 shortdesc: A biography written about Alexander Hamilton by Ron Chernow.
 categories: [ Practical, Creation Station ]
 tags: [ book, sentimental object, government, school, united states ]
 itemabout: | 
- This is a book about Alexander Hamilton written by Ron Chernow. This is a biography (819 pages) about Alexander Hamilton, first Treasury Secretary of the United States. It has handwritten annotations (highlights, pencils, and flags) noting topics of significance. 
+ This biography (819 pages) about Alexander Hamilton, first Treasury Secretary of the United States, was written by Ron Chernow in 2005. The item contributor purchased it in February of 2019, and in the few short months since its purchase, the contributor has added a large number of handwritten annotations, highlights, pencils, and sticky flags, all of which note topics of significance. For more on Hamilton's letter collection, visit [The Alexander Hamilton collection at the Library of Congress](https://www.loc.gov/collections/alexander-hamilton-papers/about-this-collection/related-resources/).
 itemquote: |
  I'm currently doing research on Alexander Hamilton. My whole year has been learning about Hamilton and his life and how his letters correspond to the musical lyrics. This book has become a sort of security blanket for me. I take it everywhere. While it's incredibly heavy and takes up a lot of space, it comforts me to bring it with me. Also, it's honestly a great book to read.
 ---
