--- a/_items/2019-03-22-ID0005.md
+++ b/_items/2019-03-22-ID0005.md
@@ -10,8 +10,8 @@ itemsubjecturl: http://id.loc.gov/authorities/names/n79021633.html
 itemdate: Circa 2005
 itemtype: Physical Object
 shortdesc: A biography written about Alexander Hamilton by Ron Chernow.
-categories: [ Practical, Creation Station ]
-tags: [ book, sentimental object, government, school, united states ]
+categories: [ Practical ]
+tags: [ book, sentimental object, government, school, united states, Creation Station ]
 itemabout: | 
  This biography (819 pages) about Alexander Hamilton, first Treasury Secretary of the United States, was written by Ron Chernow in 2005. The item contributor purchased it in February of 2019, and in the few short months since its purchase, the contributor has added a large number of handwritten annotations, highlights, pencils, and sticky flags, all of which note topics of significance. For more on Hamilton's letter collection, visit [The Alexander Hamilton collection at the Library of Congress](https://www.loc.gov/collections/alexander-hamilton-papers/about-this-collection/related-resources/).
 itemquote: |
