--- a/_items/2019-03-22-ID0013.md
+++ b/_items/2019-03-22-ID0013.md
@@ -4,16 +4,15 @@ title: Mega Venusaur Pin
 author: jonathan
 itemid: 2019-03-22-ID0013
 itemcontributor: Samantha Demmerle
-itemcreator: unknown
+itemcreator: The Pokémon Company
 itemsubject:
-itemdate: unknown
+itemdate: 2016
 itemtype: Physical Object
 shortdesc: A shiny enamel pin of the Pokémon Venusaur in its mega evolved form. It had a gold trim, and a silver back, with a black plastic stopper. 
 categories: [ Sentimental ]
 tags: [ pin, pokemon, personal ]
----
-
 itemabout: |
-A shiny enamel pin of the Pokémon Venusaur in its mega evolved form. It had a gold trim, and a silver back, with a black plastic stopper. 
+ A shiny enamel pin of the Pokémon Venusaur in its mega-evolved form, which is a recent addition to Pokémon evolution that is only available in battle. It has a gold trim, and a silver back, with a black plastic stopper.
 itemquote: |
-My best friend gave it to me out of the blue one day. He knows that I love Pokémon, and he said that I would take better care of it than he would.
+ My best friend gave it to me out of the blue one day. He knows that I love Pokémon, and he said that I would take better care of it than he would. I collect pins, generally speaking, and I put them on my backpack. Often they fall off, but this one is trusty and has stuck with me for a long time. Pokémon has been part of my life for the entire 22 years that I've been around, but this pin is even more sweet and sentimtal because my best friend gave it to me. It's also practical because it strikes up conversations with people.
+---
