--- a/_items/2019-03-019-ID0003.md
+++ b/_items/2019-03-019-ID0003.md
@@ -8,11 +8,13 @@ itemcreator: Unknown
 itemsubject: Wallets
 itemdate: Unknown
 itemtype: Physical Object
-shortdesc: A black, faux-leather, bi-fold wallet.  The outside face is smooth, while the inside face contains four tiered pockets on each side of the fold to hold business cards, credit cards, and the like.  The main pocket has a divider down the centre, so that one can separate cash from, e.g., receipts or coupons.  The outside face also has a small, slide-out holder, with a clear plastic pocket on one side (designed to hold an identification card of some sort), and several tiered pockets (similar to the ones inside the main device).  
+shortdesc: A black, faux-leather, bi-fold wallet measuring 3.75"w x 2.25"t x 
 categories: [ Practical ]
 tags: [ wallet, money, faux leather, material culture ]
 itemabout: |
- The designs of wallets have evolved to hold modern forms of currency, such as debit cards, as well as physical cash. The wallet is also designed to hold identification in a useable matter, hence the clear plastic holder. The wallet is made of Faux leather which is a form of synthetic leather that was developed to mass produce leather materials in a durable, flexible, and leather imitating way. 
+ This black, faux-leather, bi-fold wallet has a smooth outside face. The inside face contains four tiered pockets on each side of the fold to hold business cards and credit cards. The main pocket has a divider down the center to separate cash from receipts or coupons. The outside face also has a small, slide-out holder, with a clear plastic pocket on one side (designed to hold an identification card of some sort), and several tiered pockets (similar to the ones inside the main wallet pocket). 
+ 
+ The designs of wallets have evolved to hold modern forms of currency, such as debit and credit cards, as well as physical cash. The wallet is also designed to hold identification in a useable matter, hence the clear plastic holder. The wallet is made of Faux leather which is a form of synthetic leather that was developed to mass produce leather materials in a durable, flexible, and leather imitating way. 
 itemquote: |
- It holds my money and essential identification papers, so I never leave home without it.
+ It was given to me as a gift maybe 10 or 12 years ago--a while ago. It's very useful in its functionality. It holds my money and essential identification papers, so I never leave home without it. As long as its in my pocket, I know I'm good to go.
 ---
