--- a/_items/2019-03-019-ID0010.md
+++ b/_items/2019-03-019-ID0010.md
@@ -6,13 +6,13 @@ itemid: 2019-03-019-ID0010
 itemcontributor: Salina Tesfagiorgis
 itemcreator: Apple
 itemsubject: Laptop computers
-itemdate: 
+itemdate: circa 2016
 itemtype: Physical Object
-shortdesc: I have a MacBook air, and a dark green case that holds some stickers that technically express my interests. There's a sticker of Angela Davis, one of the 1984 Olympics, some stickers in Arabic and an Lebanese singer. There's also a sticker of an activist organization I've done work with. There's also a "modern art" sticker on it as well as a sticker promoting something environmental. 
+shortdesc: This MacBook air is in a dark green case with stickers of (among other things) Angela Davis, the 1984 Olympics, a Lebanese singer, and an activist organization the contributor works with.
 categories: [ Sentimental,Practical ]
 tags: [ Laptop, Laptop Case, Stickers, Macbook,  ]
 itemabout: |
   Technology, such as this laptop and other laptops included in the collection, spread quickly due to several different patterns of adoption. Computer systems were invented in the 1940's and were large, costly, and complex. Only a small subset of the population could access a computer, including academics and military personnel.  IT systems became so widespread due to favorable economic, social, and legal environments. Technology has become less expensive as it improved, making it more accessible. IT systems also developed unique characteristics as well as the ability to move software from an older generation of IT systems to a newer generation, making development easier. Countries also had to have the appropriate social and legal environments. Laws encouraging IT systems, especially patent and copyright laws that protected the invention of new technology were created, and educations systems changed to inform students on how to use technology sufficiently. In addition to that, governments promoted dispersion of technology. For example, the U.S. heavily invested in IT systems because it helped stimulate the economy and gave the country an edge in the Cold War. [Read more in the article “How New Technologies Spread: Lessons from Computing Technologies”here](https://www.jstor.org/stable/24468014?seq=1#metadata_info_tab_contents.)
 itemquote: |
-  My laptop is my pride and joy (laughing but serious). I tend to write most things out (assignments, notes, etcetera) but my laptop contains programs and documents and all my assignments and duties. Also, because I use it so frequently, I decorated it and made it truly mine. It also costed me a lot of money and was one of the most expensive purchases I've made independantly. 
+  My laptop is my pride and joy. I tend to write most things out (assignments, notes, etcetera) but my laptop contains programs and documents and all my assignments and duties. Also, because I use it so frequently, I decorated it and made it truly mine. There's a sticker of Angela Davis, one of the 1984 Olympics, some stickers in Arabic and an Lebanese singer. There's also a sticker of an activist organization I've done work with. There's also a "modern art" sticker on it as well as a sticker promoting something environmental. It also costed me a lot of money and was one of the most expensive purchases I’ve made independently.
 ---
