--- a/_items/2019-03-019-ID0010.md
+++ b/_items/2019-03-019-ID0010.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Laptop+ Case and Stickers
+title: Apple Laptop Case and Stickers
 author: kasey
 itemid: 2019-03-019-ID0010
 itemcontributor: Salina Tesfagiorgis
