--- a/_items/2019-03-019-ID0009.md
+++ b/_items/2019-03-019-ID0009.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Laptop
+title: Lenovo Laptop with Stickers
 author: katie
 itemid: 2019-03-019-ID0009
 itemcontributor: Neelam Patel
