--- a/_items/2019-03-05-ID0010.md
+++ b/_items/2019-03-05-ID0010.md
@@ -8,13 +8,13 @@ itemcreator: unknown
 itemsubject: gay pride
 itemdate: circa 2018
 itemtype: Physical Object
-shortdesc: It is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was purchased from Amazon and is normally worn on a backpack. This pin represents a part of Sarah's identity.
+shortdesc: It is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was purchased from Amazon and is normally worn on a backpack. This pin represents a part of the contributor's identity.
 categories: [ Sentimental ]
 tags: [ pin, pansexual, accessory, material culture ]
 itemabout: |
  This pin is a small, heart-shaped, metal pin that is blue, yellow, and pink to represent pansexual pride colors. It was given as a gift to show support of coming out as Pansexual. It was purchased from Amazon and is normally worn on a backpack.
 
- Pins have been used in the United States since 1789 for George Washington’s first inauguration. Then, they were patented in 1892 by Benjamin Whitehead. Aftee the original political use, pins were often used by companies to adverise their products. Learn more at [History of Pinback Buttons](https://www.custombuttons.com/blog/history-pinback-buttons/).
+ Pins have been used in the United States since 1789 for George Washington’s first inauguration. Then, they were patented in 1892 by Benjamin Whitehead. After the original political use, pins were often used by companies to adverise their products. Learn more at [History of Pinback Buttons](https://www.custombuttons.com/blog/history-pinback-buttons/).
  
  Now, pins and buttons have become commonplace for elections and are often used to grab attention for something. For example, they are often handed out for free on campus to advertise a certain club or group. Pins are also used to show support or express a certain feeling. This pin is worn or shown off so others can see and hopefully will also support LGBTQ+ members.
 itemquote: |
