--- a/_items/2019-03-05-ID0006.md
+++ b/_items/2019-03-05-ID0006.md
@@ -1,6 +1,6 @@
 ---
 layout: item
-title: Dance Shoes
+title: Tan pirouette dance shoes
 author: tara
 itemid: 2019-03-05-ID0006
 itemcontributor: Tara Rosenwinkel
@@ -14,7 +14,7 @@ tags: [ material culture, clothing, feet, shoes, dance  ]
 itemabout: |  
  Women's size 6 tan shoes that cover half of the foot with two elastic bands that go around the heel/ankle.
 
- Pirouettes are tan shoes, made out of canvas or leather, that cover half of the foot with two elastic bands that go around the heel and ankle. They began to emerge in the dance world when modern dance styles became more popular.  This called for a change in [dancewear.] (www.jstor.org/stable/40259742)  Untraditional kinds of movement required women to have footwear that enabled them to have their feet planted firmly on the ground.  The exposed heel and flexible material around the toes allows for the wearer to have more grip on the floor when in motion.
+ Pirouettes are tan shoes, made out of canvas or leather, that cover half of the foot with two elastic bands that go around the heel and ankle. They began to emerge in the dance world when modern dance styles became more popular.  This called for a change in [dancewear](www.jstor.org/stable/40259742).  Untraditional kinds of movement required women to have footwear that enabled them to have their feet planted firmly on the ground.  The exposed heel and flexible material around the toes allows for the wearer to have more grip on the floor when in motion.
 itemquote: |
  Dance was a big part of my life in high school and helped shape parts of my personality by teaching me valuable life skills as well as dance skills.
 ---
