Item layout revision and dorodango template

--- a/_items/2019-10-01-0015.md
+++ b/_items/2019-10-01-0015.md
@@ -2,6 +2,7 @@
 layout: item
 title: Dorodango
 author: Ashley Hennessey
+studentcontributor: Ashley Hennessey
 itemid: 2019-10-01-0015
 itemcontributor: Christopher Nunn
 itemcreator: Christopher Nunn
@@ -14,25 +15,27 @@ categories: [ Community Culture, Individual Expression ]
 tags: [ clay, mud, art in education, Touch--Psychological Aspects, Play,  learning, nature ]
 ---
 
-## About This Item
+## About This Object
 
 The Dorodango collection is a collection of mudballs that were collected by the object’s owner over the course of the past 25 years. He teaches the process of creating dorodango as an educational tool in his art classes to help his students learn how nature can be used to create art, to teach them patience, and as a means of relief and comfort. 
 
-The secondary sources used are A Post-Communist Picnic written by Yi Sheng and International Perspectives on Early Childhood Education and Care written by Jan Georgeson and Jane Payler. The primary sources being used are correspondence about early childhood education written from 1969-1979 by Annie L. Butler and a YouTube video titled How to Make a Dorodango (Japanese Polished Clay Ball) created by The Nito Project (video below).
+<p class=blockquote style='font-size:115%;'>This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort.</p>
+
+## Play as Educational Development
+### A History Harvest Perspective
+{% if page.studentcontributor %}
+
+*Exhibit text by {{ page.studentcontributor }}{% endif %}*
+
+If you, like our contributor, see the value of using mudballs to learn about Earth, creativity, meditation and oneself, try your hand! This video on the step-by-step process that takes mud from dirt and water to polished sphere was created by The Nito Project.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BDSee1-4bUI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-A Post-Communist Picnic written by Yi Sheng ties to the dorodango because it explains how they were researched during the 1990’s to learn more about child psychology and education. This source emphasizes play as child development in relation to the creation of mudballs, and illustrates the benefits of using mudballs to learn about Earth, creativity, meditation and oneself. This connects to the dorodango because the object’s owner explains its significance by connecting the object to art education and learning. The journal article provides more light to how mudballs are a good tool for playing as one is developing.
+But the dorodango isn't just an art form. It's also about the role of play in human development. In the 1960s and '70s, a professor at Indiana University, Annie L. Butler, emphasized the importance of play as development in childhood education, a dedication visible in the [collection of correspondence and publications](http://purl.dlib.indiana.edu/iudl/findingaids/archives/InU-Ar-VAA3219) she bequeathed to IU's University Archives. We can see her discussions of the ways that play shapes young childrens' learning environments echoed in our History Harvest contributor's description of how he uses the creation of dorodango to explore play in higher-education classrooms.
 
-This article helps see a connection between the dorodango and the correspondence about early childhood education from Annie L. Butler. Butler is a professor at Indiana University who emphasized the importance of play as development in childhood education and mudballs were used by an art teacher to teach his students about art, nature, and as a means of comfort. The object provides a real-life example of mudballs used in education, A Post-Communist Picnic research about mudballs as play as development, and the collection from Annie L. Butler provides the big picture of play as development: information on why play as development is important in childhood education. 
+The making of dorodango was revived in the late 1990s by Professor Fumiu Kayo, a Japanese professor studying the intersection of experimentation and play in childhood development.[^1] Kayo's research suggests that it is important for children to learn about nature through experiencing nature. The combination of play and experimentation involved in making dorodango helps very young children acquire a respect for nature and learn mental balance, lessons that last well into adulthood.[^2]
 
-The other secondary source, International Perspectives on Early Childhood Education and Care, provides another connection between child development/education and dorodango through the lens of Japanese educational pedagogy and curriculum. Because, as evident from this text, Dorodango originated as a tradition by children in Japan, understanding the Japanese implications of play as development is important (pg. 244). The text explains how it is important for children to learn about nature through experiencing nature, and benefits that result from doing so, such as acquiring a respect for nature, as well as mental balance (pg. 249). This text helps to relate the object to Annie L. Butler’s collection of correspondence because it uses dorodango as an explanation for the educational benefits of this practice. It also connects to A Post-Communist Picnic because that souce highlights the presence of dorodango in Japanese educational culture while this text provides more background to the principles of japense education and curriculum that explain the purpose dorodango serves. Both sources also touch on the meditative qualities of dorodango. 
+The dorodango contribution brings ideas of play from Professor Butler's mid-century work together with early childhood education in Japan in Bloomington classrooms and shows us just how embedded in a global context we are at IUB.
 
-The second primary source that is used is How to Make a Dorodango (Japanese Polished Clay Ball). This video brings the audience step by step how to create mud balls. It connects to the object because it provides a visual illustrating the creation of the mud balls. By understanding how dorodango is actually made through witnessing it happen, one can better understand the educational significance dorodango has in its creation. Because of the stronger understanding of the process that this video provides, it helps the two secondary sources and the other primary source to be better understood, as well.  
-
-The keyword pulled from this source that are used in the network analysis are mud, clay, clay soils, ball clay, art in education, children, attention, attention in children, learning, nature, Japan, curriculum, teacher, mud balls, community culture of educators/learners, identity as an educator, creativity, and individual growth. The research question we asked is how do the cultural differences of each object affect how they serve as a mode of individual self expression? This collection of mud balls  relates to our research question because it is an educational tool, and through learning the student grows, and individual growth is a mode for individual expression. Additionally, because dorodango is used in education, this collection reflects the culture of education in the United States.
-
-
-## From the Contributor
-
-This is a collection of mudballs built over 25 years of teaching children that they can manipulate materials in order to make art and bring them comfort.
+[^1]: Yi Sheng, "[A Post-Communist Picnic](https://scholarscompass.vcu.edu/cgi/viewcontent.cgi?article=3165&context=etd)" (2010, Virginia Commonwealth University)
+[^2]: Manabu Sumida, "Japanese view of Nature and Early Years Science Teaching", in International Perspectives on Early Childhood Education and Care", eds. Jan Georgeson and Jane Payler (Open University Press, 2013).
